# PulsarPOCs

./: .gitignore  lauch_pulsar_docker.sh
rust/consumer/: Cargo.toml  consumer.sh
rust/consumer/src/: main.rs
rust/producer/: Cargo.toml  log.txt  producer.sh
rust/producer/src/: agg_producer.rs  main.rs  producers.rs  simple_producer.rs
